--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -71,11 +71,17 @@
   --space-4: 1rem;
   --space-6: 1.5rem;
   --space-8: 2rem;
+  --space-10: 2.5rem;
   --space-12: 3rem;
   --space-16: 4rem;
   --space-24: 6rem;
 
   --max-width: 72rem;
+
+  --radius-sm: 4px;
+  --radius-md: 8px;
+  --radius-lg: 12px;
+  --radius-full: 9999px;
 
   --dimen-header-z-index: 501;
   --dimen-header-height: 64px;
